<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/icon_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="60dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:text="@string/reset_password"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textSizeLarge1"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/text_new_password_tips"
        android:textColor="@color/common_textSecond"
        android:textSize="@dimen/common_textSmall" />

    <com.dreame.smartlife.account.view.InputTextField
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/reset_input_original_password"
        app:defaultCipher="true"
        app:showCiphertext="true"
        app:showClear="true"
        app:showCountryCode="false" />

    <com.dreame.smartlife.account.view.InputTextField
        android:id="@+id/field_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_new_pwd"
        app:defaultCipher="true"
        app:showCiphertext="true"
        app:showClear="true"
        app:showVerifCode="false" />

    <com.dreame.smartlife.account.view.InputTextField
        android:id="@+id/field_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_new_pwd"
        app:defaultCipher="true"
        app:showCiphertext="true"
        app:showClear="true"
        app:showVerifCode="false" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        style="@style/common_style_button"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/common_selector_btn"
        android:textSize="@dimen/common_textLarge" />


</LinearLayout>