<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/icon_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="60dp"
            android:gravity="center"
            android:text="@string/set_password"
            android:textAlignment="gravity"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textSizeLarge1"
            android:textStyle="bold" />

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="27dp"
        android:gravity="start"
        android:text="@string/text_new_password_tips"
        android:textColor="@color/common_textSecond"
        android:textSize="@dimen/common_textSmall" />

    <com.dreame.smartlife.account.view.InputTextField
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/please_set_your_pwd"
        app:defaultCipher="true"
        app:showCiphertext="true"
        app:showClear="true"
        app:showCountryCode="false"
        app:showVerifCode="false" />

    <com.dreame.smartlife.account.view.InputTextField
        android:id="@+id/field_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/please_set_your_pwd"
        app:defaultCipher="true"
        app:showCiphertext="true"
        app:showClear="true"
        app:showCountryCode="false"
        app:showVerifCode="false" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_commit"
        style="@style/common_style_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/common_selector_btn"
        android:textSize="@dimen/common_textLarge" />


</LinearLayout>